# kv-mall

./: .gitignore  LOGGING_MIGRATION.md  Makefile  OPENTELEMETRY_INSTRUMENTATION.md  README.md  config-example.yaml  kv_mall.excalidraw
ads/: Dockerfile  main.py  requirements.txt
ads/deployment/: deployment.yaml  service.yaml
analytics/: Dockerfile  go.mod  go.sum  main.go
analytics/deployment/: deployment.yaml
analytics/persisters/: cassandra.go  cosmos.go  interface.go  memcached.go  postgresql.go
analytics/pkg/: manager.go
coupon/: Dockerfile  app.js  debug.json  instrumentation.js  logger.js  package-lock.json  package.json
coupon/deployment/: deployment.yaml
currency/: Dockerfile
frontend/: .gitignore  Dockerfile  pom.xml
infra/: cassandra.yaml  kafka-deployment.yaml  kafka-service.yaml  memcached.yaml  mysql.yaml  namespaces.yaml  postgres.yaml  zookeeper-deployment.yaml  zookeeper-service.yaml
inventory/: Dockerfile  pom.xml
load-generator/: Dockerfile  go.mod  main.go
mail/: Dockerfile  index.ts  logger.ts  package-lock.json  package.json
membership/: Dockerfile  go.mod  kafka.go  main.go
nginx/: Dockerfile  nginx.conf
pricing/: Dockerfile  pom.xml
prod-deploy/: analytics-deployment.yaml  coupon-deployment.yaml  deployment-analytics.yaml  frontend-deployment.yaml  inventory-deployment.yaml  load-generator-deployment.yaml  membership-deployment.yaml  pricing-deployment.yaml
recommendations/: CMakeLists.txt  Dockerfile  README.md  main.cpp
recommendations/deployment/: deployment.yaml  service.yaml
warehouse/: Dockerfile  pom.xml
(+40 files in other folders)
